--- a/website/profile.css
+++ b/website/profile.css
@@ -1,8 +1,22 @@
+@import url(https://fonts.googleapis.com/css?family=Rubik);
+
 li {
   display: inline;
   float: left;
 }
 
+h1 {
+  color: #EAE7DC;
+  font-size: 100px;
+  text-align: center;
+  font-family: Rubik;
+}
+
+h3 {
+  color: black;
+  font-size: 20px;
+  font-family: Rubik;
+}
 
 ul {
   list-style-type: none;
@@ -10,6 +24,10 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #333;
+}
+
+p {
+  font-family: Rubik;
 }
 
 li a {
@@ -27,4 +45,34 @@ li a:hover {
 .active {
   background-color: #4CAF50;
   color: white;
+}
+
+.name {
+  border-radius: 4px;
+}
+
+.email {
+  border-radius: 4px;
+}
+
+.major {
+  border-radius: 4px;
+}
+
+.minor {
+  border-radius: 4px;
+}
+
+.gradyear {
+  border-radius: 4px;
+}
+
+.updateinfo {
+  border-radius: 8px;
+  font-family: Rubik;
+}
+
+.gotocollegewebsite {
+  border-radius: 8px;
+  font-family: Rubik;
 }
