--- a/website/semesterGPA.css
+++ b/website/semesterGPA.css
@@ -1,8 +1,16 @@
+@import url(https://fonts.googleapis.com/css?family=Rubik);
+
 li {
   display: inline;
   float: left;
 }
 
+h1 {
+  color: #EAE7DC;
+  font-size: 100px;
+  text-align: center;
+  font-family: Rubik;
+}
 
 ul {
   list-style-type: none;
@@ -27,4 +35,46 @@ li a:hover {
 .active {
   background-color: #4CAF50;
   color: white;
+}
+
+th {
+  font-size: 20px;
+  text-align: center;
+  font-family: Rubik;
+}
+
+.addButton {
+  background-color: #EDC7B7;
+  font-size: 18px;
+  color: #AC3B61;
+  border-color: #EDC7B7;
+  border-radius: 8px;
+  position: absolute;
+  left: 25px;
+  top: 400px;
+  font-family: Rubik;
+}
+
+.calculateButton {
+  background-color: #EDC7B7;
+  font-size: 18px;
+  color: #AC3B61;
+  border-color: #EDC7B7;
+  border-radius: 8px;
+  position: absolute;
+  left: 90px;
+  top: 400px;
+  font-family: Rubik;
+}
+
+.calculatecgpa {
+  background-color: #EDC7B7;
+  font-size: 18px;
+  color: #AC3B61;
+  border-color: #EDC7B7;
+  border-radius: 8px;
+  position: absolute;
+   left: 225px;
+  top: 400px;
+  font-family: Rubik;
 }
