--- a/website/cumulativeGPA.css
+++ b/website/cumulativeGPA.css
@@ -8,9 +8,16 @@ li {
 h1 {
   color: #EAE7DC;
   font-size: 100px;
-  text-align: center;
+  text-align: left;
   font-family: Rubik;
   /*word-spacing: 20px;*/
+}
+
+h2 {
+  color: #EAE7DC;
+  font-size: 50px;
+  text-align: left;
+  font-family: Rubik;
 }
 
 ul {
@@ -36,4 +43,102 @@ li a:hover {
 .active {
   background-color: #4CAF50;
   color: white;
+}
+
+
+th {
+  font-size: 20px;
+  text-align: left;
+  font-family: Rubik;
+  height: 50px;
+}
+
+td {
+  font-family: Rubik;
+}
+
+.addButton {
+  background-color: #EDC7B7;
+  font-size: 18px;
+  color: #AC3B61;
+  border-color: #EDC7B7;
+  border-radius: 8px;
+  /* position: absolute;
+  left: 25px;
+  top: 400px; */
+  font-family: Rubik;
+}
+
+.calculateButton {
+  background-color: #EDC7B7;
+  font-size: 18px;
+  color: #AC3B61;
+  border-color: #EDC7B7;
+  border-radius: 8px;
+  /* position: absolute;
+  left: 90px;
+  top: 400px; */
+  font-family: Rubik;
+}
+
+ .calculatecgpa {
+  background-color: #EDC7B7;
+  font-size: 18px;
+  color: #AC3B61;
+  border-color: #EDC7B7;
+  border-radius: 8px;
+  /* position: absolute;
+   left: 225px;
+  top: 400px; */
+  font-family: Rubik;
+}
+
+select {
+  font-family: Rubik;
+  font-size: 13px;
+}
+
+table {
+  width: 60%;
+}
+
+input[type="radio"] {
+  margin-right: 5px;
+}
+
+
+input[type=text]:focus {
+  border: 3px solid #555;
+  font-size: 20px;
+  /* border-bottom: 2px solid red; */
+
+}
+
+input {
+  font-size: 20px;
+  color: blue;
+
+}
+
+/* input[type=text] {
+  border: 3px solid #555;
+  font-size: 20px;
+  border-bottom: 2px solid red;
+
+} */
+
+::placeholder {
+    font-size: 20px;
+    font-family: Rubik;
+
+}
+
+.t1 {
+  width: 300px;
+  height: 50px;
+}
+
+.t2 {
+  width: 300px;
+  height: 50px;
 }
