--- a/website/semesterGPA.css
+++ b/website/semesterGPA.css
@@ -8,7 +8,14 @@ li {
 h1 {
   color: #EAE7DC;
   font-size: 100px;
-  text-align: center;
+  text-align: left;
+  font-family: Rubik;
+}
+
+h2 {
+  color: #EAE7DC;
+  font-size: 50px;
+  text-align: left;
   font-family: Rubik;
 }
 
@@ -39,7 +46,12 @@ li a:hover {
 
 th {
   font-size: 20px;
-  text-align: center;
+  text-align: left;
+  font-family: Rubik;
+  height: 50px;
+}
+
+td {
   font-family: Rubik;
 }
 
@@ -49,9 +61,9 @@ th {
   color: #AC3B61;
   border-color: #EDC7B7;
   border-radius: 8px;
-  position: absolute;
+  /* position: absolute;
   left: 25px;
-  top: 400px;
+  top: 400px; */
   font-family: Rubik;
 }
 
@@ -61,20 +73,33 @@ th {
   color: #AC3B61;
   border-color: #EDC7B7;
   border-radius: 8px;
-  position: absolute;
+  /* position: absolute;
   left: 90px;
-  top: 400px;
+  top: 400px; */
   font-family: Rubik;
 }
 
-.calculatecgpa {
+ .calculatecgpa {
   background-color: #EDC7B7;
   font-size: 18px;
   color: #AC3B61;
   border-color: #EDC7B7;
   border-radius: 8px;
-  position: absolute;
+  /* position: absolute;
    left: 225px;
-  top: 400px;
+  top: 400px; */
   font-family: Rubik;
+}
+
+select {
+  font-family: Rubik;
+  font-size: 13px;
+}
+
+table {
+  width: 60%;
+}
+
+input[type="radio"] {
+  margin-right: 5px;
 }
