--- a/website/profile.css
+++ b/website/profile.css
@@ -68,11 +68,31 @@ li a:hover {
 }
 
 .updateinfo {
+  background-color: #EDC7B7;
+  font-size: 18px;
+  color: #AC3B61;
+  border-color: #EDC7B7;
   border-radius: 8px;
+  /* position: absolute;
+   left: 225px;
+  top: 400px; */
   font-family: Rubik;
 }
 
 .gotocollegewebsite {
+  background-color: #EDC7B7;
+  font-size: 18px;
+  color: #AC3B61;
+  border-color: #EDC7B7;
   border-radius: 8px;
+  /* position: absolute;
+   left: 225px;
+  top: 400px; */
   font-family: Rubik;
+}
+
+
+select {
+  font-family: Rubik;
+  font-size: 13px;
 }
