--- a/website/semesterGPA.css
+++ b/website/semesterGPA.css
@@ -8,14 +8,14 @@ li {
 h1 {
   color: #EAE7DC;
   font-size: 100px;
-  text-align: left;
+  text-align: center;
   font-family: Rubik;
 }
 
 h2 {
   color: #EAE7DC;
   font-size: 50px;
-  text-align: left;
+  text-align: center;
   font-family: Rubik;
 }
 
