--- a/website/home.css
+++ b/website/home.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik);
 
 body {
-  background-color: #2D283E;
+  background-color: #292B2F;
 }
 
 ul {
@@ -9,7 +9,7 @@ ul {
 }
 
 h1 {
-  color: #EAE7DC;
+  color: #3BBFC3;
   font-size: 100px;
   text-align: center;
   font-family: Rubik;
@@ -28,8 +28,8 @@ h1 {
 
 .grid-item1 {
   text-align: center;
-  background-color: #4C495D;
-  color: #AC3B61;
+  background-color: #D7D5D9;
+  color: #292B2F;
   padding: 100px 58px;
   border-radius: 12px;
   font-family: Rubik;
@@ -37,8 +37,8 @@ h1 {
 
 .grid-item2 {
   text-align: center;
-  background-color: #D1D7E0;
-  color: #AC3B61;
+  background-color: #D7D5D9;
+  color: #292B2F;
   padding: 100px 50px;
   border-radius: 12px;
   font-family: Rubik;
@@ -46,8 +46,8 @@ h1 {
 
 .grid-item3 {
   text-align: center;
-  background-color: #564F6F;
-  color: #AC3B61;
+  background-color: #D7D5D9;
+  color: #292B2F;
   padding: 100px 34px;
   border-radius: 12px;
   font-family: Rubik;
@@ -56,8 +56,8 @@ h1 {
 
 .grid-item4 {
   text-align: center;
-  background-color: #EDC7B7;
-  color: #AC3B61;
+  background-color: #D7D5D9;
+  color: #292B2F;
   padding: 100px 40px;
   border-radius: 12px;
   font-family: Rubik;
@@ -66,8 +66,8 @@ h1 {
 
 .grid-item5 {
   text-align: center;
-  background-color: #BAB2B5;
-  color: #AC3B61;
+  background-color: #D7D5D9;
+  color: #292B2F;
   padding: 100px 105px;
   border-radius: 12px;
   font-family: Rubik;
@@ -75,8 +75,8 @@ h1 {
 
 .grid-item6 {
   text-align: center;
-  background-color: #EDC7B7;
-  color: #AC3B61;
+  background-color: #D7D5D9;
+  color: #292B2F;
   padding: 101px 123px;
   border-radius: 12px;
   font-family: Rubik;
@@ -89,10 +89,10 @@ h1 {
 
 
 .logout  {
-  background-color: #EDC7B7;
+  background-color: #3BBFC3;
   font-size: 18px;
-  color: #AC3B61;
-  border-color: #EDC7B7;
+  color: #292B2F;
+  border-color: #3BBFC3;
   border-radius: 8px;
   position: absolute;
   left: 1157px;
