--- a/website/semesterGPA.css
+++ b/website/semesterGPA.css
@@ -1,19 +1,23 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik);
 
+body {
+  background-color: #292B2F
+}
+
 li {
   display: inline;
   float: left;
 }
 
 h1 {
-  color: #EAE7DC;
+  color: #3BBFC3;
   font-size: 100px;
   text-align: center;
   font-family: Rubik;
 }
 
 h2 {
-  color: #EAE7DC;
+  color: #3BBFC3;
   font-size: 50px;
   text-align: center;
   font-family: Rubik;
@@ -24,24 +28,26 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #018185;
+  font-family: Rubik;
 }
 
 li a {
   display: block;
-  color: white;
+  color: #292B2F;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: Rubik;
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: #d7d5d9;
 }
 
 .active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #d7d5d9;
+  color: #292B2F;
 }
 
 th {
@@ -49,17 +55,19 @@ th {
   text-align: left;
   font-family: Rubik;
   height: 50px;
+  color: #d7d5d9;
 }
 
 td {
   font-family: Rubik;
+  color: #d7d5d9;
 }
 
 .addButton {
-  background-color: #EDC7B7;
+  background-color: #D7D5D9;
   font-size: 18px;
-  color: #AC3B61;
-  border-color: #EDC7B7;
+  color: #292B2F;
+  border-color: #D7D5D9;
   border-radius: 8px;
   /* position: absolute;
   left: 25px;
@@ -69,10 +77,10 @@ td {
 }
 
 .calculateButton {
-  background-color: #EDC7B7;
+  background-color: #D7D5D9;
   font-size: 18px;
-  color: #AC3B61;
-  border-color: #EDC7B7;
+  color: #292B2F;
+  border-color: #D7D5D9;
   border-radius: 8px;
   /* position: absolute;
   left: 90px;
