--- a/website/profile.css
+++ b/website/profile.css
@@ -1,19 +1,23 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik);
 
+body {
+  background-color: #292B2F;
+}
+
 li {
   display: inline;
   float: left;
 }
 
 h1 {
-  color: #EAE7DC;
+  color: #3BBFC3;
   font-size: 100px;
   text-align: center;
   font-family: Rubik;
 }
 
 h3 {
-  color: black;
+  color: #3BBFC3;
   font-size: 20px;
   font-family: Rubik;
 }
@@ -23,23 +27,25 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #018185;
+  font-family: Rubik;
 }
 
 p {
   font-family: Rubik;
+  color: #d7d5d9;
 }
 
 li a {
   display: block;
-  color: white;
+  color: #292B2F;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: #d7d5d9;
 }
 
 .active {
@@ -68,10 +74,10 @@ li a:hover {
 }
 
 .updateinfo {
-  background-color: #EDC7B7;
+  background-color: #d7d5d9;
   font-size: 18px;
-  color: #AC3B61;
-  border-color: #EDC7B7;
+  color: #292B2F;
+  border-color: #d7d5d9;
   border-radius: 8px;
   /* position: absolute;
    left: 225px;
@@ -80,10 +86,10 @@ li a:hover {
 }
 
 .gotocollegewebsite {
-  background-color: #EDC7B7;
+  background-color: #d7d5d9;
   font-size: 18px;
-  color: #AC3B61;
-  border-color: #EDC7B7;
+  color: #292B2F;
+  border-color: #d7d5d9;
   border-radius: 8px;
   /* position: absolute;
    left: 225px;
