--- a/website/cumulativeGPA.css
+++ b/website/cumulativeGPA.css
@@ -31,6 +31,7 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #018185;
+  font-family: Rubik;
 }
 
 li a {
@@ -39,6 +40,7 @@ li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: Rubik;
 }
 
 li a:hover {
