--- a/website/desiredGrade.css
+++ b/website/desiredGrade.css
@@ -1,18 +1,23 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik);
 
+body {
+  background-color: #292B2F;
+}
+
 li {
   display: inline;
   float: left;
 }
 
 h1 {
-  color: #EAE7DC;
+  color: #3BBFC3;
   font-size: 100px;
   text-align: center;
   font-family: Rubik;
 }
 
 h2 {
+  color: #3BBFC3;
   font-family: Rubik;
 }
 
@@ -21,19 +26,20 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #018185;
+  font-family: Rubik;
 }
 
 li a {
   display: block;
-  color: white;
+  color: #292B2F;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: #d7d5d9;
 }
 
 .active {
@@ -43,6 +49,7 @@ li a:hover {
 
 p {
   font-family: Rubik;
+  color: #d7d5d9;
 }
 
 .currentGrade {
@@ -62,10 +69,10 @@ p {
 }
 
 .submit {
-  background-color: #EDC7B7;
+  background-color: #d7d5d9;
   font-size: 18px;
-  color: #AC3B61;
-  border-color: #EDC7B7;
+  color: #292B2F;
+  border-color: #d7d5d9;
   border-radius: 8px;
   position: absolute;
   font-family: Rubik;
