--- a/website/us.css
+++ b/website/us.css
@@ -70,3 +70,27 @@ a img {
 .i {
   font-size: 40px;
 }
+
+.simona {
+  color: #3BBFC3;
+}
+
+.simona1 {
+  color: #3BBFC3;
+}
+
+.harika {
+  color: #3BBFC3;
+}
+
+.harika1 {
+  color: #3BBFC3;
+}
+
+div {
+  color: #d7d5d9
+}
+
+img {
+  border-radius: 30px;
+}
